# phage_catalogue

./: .gitignore  README.md  app.py  celery_worker.py  create_db.py  create_test_db.py  example.env  manage.py  pyproject.toml  requirements.dev  requirements.dev.in  requirements.in  requirements.txt  run_worker.sh
alembic/: env.py
alembic/versions/: 14ad631a54b2_create_specimenaudit_trigger.py  17d62399fef0_create_specimenaudit_trigger_update.py  6ede5d9b2133_specimens.py  ba078946b374_create_specimenaudit.py  bacterial_species.txt  f1470e032c21_create_specimenaudit_trigger_delete.py  f78b5800f287_create_bacterialspecies.py
example_data/: bacteria.txt  new_samples.xlsx
phage_catalogue/: __init__.py  admin.py  config.py  security.py
phage_catalogue/model/: __init__.py  lookups.py  security.py  specimens.py  specimens_audit.py  uploads.py
phage_catalogue/services/: lookups.py  specimens.py  uploads.py
phage_catalogue/ui/templates/ui/: another.html  dialog.html  index.html  menu_page.html
phage_catalogue/ui/templates/ui/specimens/: details.html  index.html
phage_catalogue/ui/templates/ui/uploads/: index.html
phage_catalogue/ui/views/: __init__.py  home.py  specimens.py  uploads.py
tests/: __init__.py  conftest.py  faker.py  requests.py
tests/ui/views/specimens/: __init__.py  test_bacterium_add.py  test_bacterium_update.py  test_index.py  test_phage_add.py  test_phage_update.py  test_specimen_delete.py
tests/ui/views/uploads/: test_uploads_index.py  test_uploads_upload.py
upload/: 12_Limbo_ProForma_2024.xlsx  1_fred.xlsx  9_Example.xlsx
